--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,18 @@ server:
   tomcat:
     uri-encoding: UTF-8
     max-threads: 1000
+spring:
+  application:
+    name: spring-eureka
 eureka:
   instance:
-    hostname: 127.0.0.1
+    hostname: ${spring.cloud.client.ipAddress}
     preferIpAddress: true
   client:
-    register-with-eureka: true
+    register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://${security.user.name}:${security.user.password}@${eureka.instance.hostname}:${server.port}/eureka/
 
   server:
     #eureka server刷新readCacheMap的时间，注意，client读取的是readCacheMap，这个时间决定了多久会把readWriteCacheMap的缓存更新到readCacheMap上
@@ -24,3 +27,8 @@ eureka:
     responseCacheAutoExpirationInSeconds: 180
     #启用主动失效，并且每次主动失效检测间隔为3s
     eviction-interval-timer-in-ms: 3000
+
+security:
+  user:
+    name: fengxin
+    password: fengxin
